apps/downloads/metube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metube
  namespace: downloads
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: security-tinyauth-protect@kubernetescrd
spec:
  rules:
    - host: tb.valab.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metube
                port:
                  number: 8081
    - host: metube.valab.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metube
                port:
                  number: 8081
